[gd_scene load_steps=9 format=3 uid="uid://3rg0s4tovqj4"]

[ext_resource type="Texture2D" uid="uid://31icy2h0jvvm" path="res://assets/textures/prototypes/player_projectile.png" id="1_l8gqf"]
[ext_resource type="Script" path="res://entities/projectiles/projectiles_scripts/default_missile.gd" id="1_n2dqw"]
[ext_resource type="Material" uid="uid://ctffue8yt8d8b" path="res://entities/projectiles/projectiles_scripts/missile_trail.tres" id="2_g5118"]
[ext_resource type="Texture2D" uid="uid://dt1xcc7ykfdhp" path="res://assets/textures/prototypes/explosion_area.png" id="3_hbpxc"]
[ext_resource type="PackedScene" uid="uid://c3atqdge540t0" path="res://components/status/hitbox_component.tscn" id="4_fvk8p"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jpsuv"]
lifetime_randomness = 0.58
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 10, 1)
emission_shape = 2
emission_sphere_radius = 6.83
angle_max = 191.3
direction = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 30.0
scale_over_velocity_max = 10.0
turbulence_noise_strength = 6.18

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wifd6"]
radius = 4.0
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o2017"]
radius = 5.0

[node name="DefaultMissile" type="Area2D"]
light_mask = 2
visibility_layer = 2
collision_layer = 4
collision_mask = 2
script = ExtResource("1_n2dqw")
projectile_damage = 5

[node name="MissileTrail" type="GPUParticles2D" parent="."]
position = Vector2(-19, 0)
amount = 20
process_material = ExtResource("2_g5118")
lifetime = 1.2
explosiveness = 0.2
randomness = 0.2

[node name="MissileSprite" type="Sprite2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(1, 1.1)
texture = ExtResource("1_l8gqf")

[node name="BombExplosionSprite" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
light_mask = 2
visibility_layer = 2
z_index = -5
z_as_relative = false
position = Vector2(17.25, 0.250003)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_hbpxc")

[node name="BombExplosionParticles" type="GPUParticles2D" parent="."]
position = Vector2(17, 0)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_jpsuv")

[node name="SelfProjectileBox" type="CollisionShape2D" parent="."]
modulate = Color(0.686275, 0, 0.164706, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wifd6")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="OutsideScreenCheck" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(0.4, 0.35)

[node name="HitboxComponent" parent="." instance=ExtResource("4_fvk8p")]
collision_layer = 4
collision_mask = 10

[node name="ProjectileRadius" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(17, 0)
rotation = -1.5708
shape = SubResource("CircleShape2D_o2017")

[connection signal="bomb_exploded" from="." to="." method="_bomb_exploded"]
[connection signal="screen_entered" from="OutsideScreenCheck" to="." method="_on_screen_reentered"]
[connection signal="screen_exited" from="OutsideScreenCheck" to="." method="_on_outside_screen_check_exit_detected"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_area_entered"]
